# AI-Projects

./: README.md
Customer Support Agent with Mem0/: .gitignore  README.md  main.py  pyproject.toml
Customer Support Agent with Mem0/customer_support_agent/schemas/: api.py
Customer Support Agent with Mem0/customer_support_agent/services/: copilot_service.py
Customer Support Agent with Mem0/data/chroma_rag/: chroma.sqlite3
Customer Support Agent with Mem0/notebooks/: experiments.ipynb  langchain_agent.ipynb
