[project]
name = "customer-support-agent-with-mem0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "groq>=1.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "mem0ai[nlp]>=2.0.2",
    "sentence-transformers>=5.5.1",
]
